--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,13 @@ footer p:nth-child(2){
     border-radius: 6px;
     border-radius: 50%;
 }
+
+
+.box img{
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 6px;
+	border-radius: 50%;
+}
+
